<resources>
    <string name="app_name">Android Messenger</string>
    <string name="button_text_start_server">Start Server</string>
    <string name="button_text_stop_server">Stop Server</string>
    <string name="start_qr_text">Scan QR Connection</string>

    <string name="pairing_text">This is the device you are currently paired with. Only this device can interact with your phone to send and receive SMS messages.</string>
    <string name="pairing_text_none">There are no devices currently paired with you phone.</string>
    <string name="pairing_unpair_button_text">Unpair From Device</string>

    <string name="permission_contacts_text">Granting access to contacts allows you to view your contacts names and numbers on the desktop application.</string>
    <string name="button_text_contacts">Grant Access to Contacts</string>

    <string name="permission_text_call">Granting phone call permissions allows you to initiate phone calls from the desktop application. Please grant them below if not already done so.</string>
    <string name="button_text_call">Grant Phone Call Permissions</string>

    <string name="permission_granted">Permissions Granted</string>

    <!-- Broadcast receiver filters -->
    <string name="intent_filter_device_pair">DEVICE_PAIR</string>
    <string name="intent_filter_device_unpair">DEVICE_UNPAIR</string>
    <string name="intent_filter_wifi_changed">WIFI_CHANGED</string>

    <!-- Shared preferences keys -->
    <string name="preferences_device_uuid">DEVICE_UUID</string>
    <string name="preferences_device_name">DEVICE_NAME</string>
    <string name="preferences_current_counter">CURRENT_COUNTER</string>
    <string name="preferences_current_mms_counter">CURRENT_MMSS_COUNTER</string>
    <string name="preferences_current_phonenumber">CURRENT_PHONENUMBER</string>
    <string name="preferences_should_autostart">SHOULD_AUTOSTART</string>
    <string name="preferences_properties_messenger">USER_PROPERTIES_ANDROID_MESSENGER</string>
</resources>
