<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MessageMe">

        <TextView
            android:id="@+id/ipaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferences_device_uuid"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ipaddress"
            android:layout_marginTop="81dp"
            android:text="@string/button_text_start_server"/>

        <Button
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/ipaddress"
            android:layout_marginTop="81dp"
            android:text="@string/button_text_stop_server"/>

        <LinearLayout
            android:id="@+id/line_contacts_permissions"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/start_button"
            android:layout_marginTop="5dp"
            android:background="#D3D3D3"
            android:orientation="vertical">
        </LinearLayout>

        <TextView
            android:id="@+id/contacts_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_contacts_permissions"
            android:layout_marginTop="10dp"
            android:text="@string/permission_contacts_text"/>

        <Button
            android:id="@+id/ask_contacts_permissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contacts_text"
            android:layout_marginTop="10dp"
            android:text="@string/button_text_contacts"/>

        <LinearLayout
            android:id="@+id/line_call_permissions"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/ask_contacts_permissions"
            android:layout_marginTop="5dp"
            android:background="#D3D3D3"
            android:orientation="vertical">
        </LinearLayout>

        <TextView
            android:id="@+id/phone_call_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_call_permissions"
            android:layout_marginTop="10dp"
            android:text="@string/permission_text_call"/>

        <Button
            android:id="@+id/ask_phone_call_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_call_text"
            android:layout_marginTop="10dp"
            android:text="@string/button_text_call"/>

    </RelativeLayout>
</ScrollView>
